fix: user menu is overlapped by the tags component

--- a/packages/webapp/src/components/UserToolbar/index.less
+++ b/packages/webapp/src/components/UserToolbar/index.less
@@ -19,4 +19,8 @@
   .rs-nav-item-disabled .rs-nav-item-content {
     background-color: @body-bg !important;
   }
+
+  .rs-dropdown-menu {
+    z-index: 100 !important;
+  }
 }
